--- a/index.html
+++ b/index.html
@@ -64,19 +64,19 @@
     <div class="tabela">
     <table>
         <tr>
-            <td class="campo" id="0" onclick="jogar()"></td>
-            <td class="campo" id="1" onclick="jogar()"></td>
-            <td class="campo" id="2" onclick="jogar()"></td>
+            <td class="campo" id="0" jogada = "" ></td>
+            <td class="campo" id="1" jogada = "" ></td>
+            <td class="campo" id="2" jogada = "" ></td>
         </tr>
         <tr>
-            <td class="campo" id="3" onclick="jogar()"></td>
-            <td class="campo" id="4" onclick="jogar()"></td>
-            <td class="campo" id="5" onclick="jogar()"></td>
+            <td class="campo" id="3" jogada = "" ></td>
+            <td class="campo" id="4" jogada = "" ></td>
+            <td class="campo" id="5" jogada = "" ></td>
         </tr>
         <tr>
-            <td class="campo" id="6" onclick="jogar()"></td>
-            <td class="campo" id="7" onclick="jogar()"></td>
-            <td class="campo" id="8" onclick="jogar()"></td>
+            <td class="campo" id="6" jogada = "" ></td>
+            <td class="campo" id="7" jogada = "" ></td>
+            <td class="campo" id="8" jogada = "" ></td>
         </tr>
     </table>
 </div>
