--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
     </div>
 
     <div class="tabela">
-        <div id="a1" class="espaco" jogada=""></div>
-        <div id="a2" class="espaco" jogada=""></div>
-        <div id="a3" class="espaco" jogada=""></div>
+        <div id="0" class="espaco" jogada=""></div>
+        <div id="1" class="espaco" jogada=""></div>
+        <div id="2" class="espaco" jogada=""></div>
 
-        <div id="b1" class="espaco" jogada=""></div>
-        <div id="b2" class="espaco" jogada=""></div>
-        <div id="b3" class="espaco" jogada=""></div>
+        <div id="3" class="espaco" jogada=""></div>
+        <div id="4" class="espaco" jogada=""></div>
+        <div id="5" class="espaco" jogada=""></div>
 
-        <div id="c1" class="espaco" jogada=""></div>
-        <div id="c2" class="espaco" jogada=""></div>
-        <div id="c3" class="espaco" jogada=""></div>
+        <div id="6" class="espaco" jogada=""></div>
+        <div id="7" class="espaco" jogada=""></div>
+        <div id="8" class="espaco" jogada=""></div>
 
     </div>
 
